@@ -1,3 +1,7 @@
+2006-07-27  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Fixed project files for win32 and made the debug version build again.
+
 2006-07-25  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Fix restoring of opcode handler for php 5.0.5 when files are loaded
